--- a/CSS/style.css
+++ b/CSS/style.css
@@ -159,60 +159,50 @@ a {
   font-size: 1.1em;
 }
 
-.dropdown-menu {
+..dropdown-menu {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   border: none;
   border-radius: 0;
   padding: 0.7em;
 }
-
-@media only screen and (min-width: 300px) and (max-width: 1140px) {
+@media only screen and (min-width: 992px) {
   .dropdown:hover .dropdown-menu {
     display: flex;
   }
-
   .dropdown-menu.show {
     display: flex;
   }
 }
-
 .dropdown-menu ul {
   list-style: none;
   padding: 0;
 }
-
 .dropdown-menu li .dropdown-item {
   color: gray;
   font-size: 1em;
   padding: 0.5em 1em;
 }
-
 .dropdown-menu li .dropdown-item:hover {
   background-color: #f1f1f1;
 }
-
 .dropdown-menu li:first-child a {
   font-weight: bold;
-  font-size: 1em;
-  text-transform: uppercase;
-  color: #516beb;
+  font-size: 1.2em;
+  color: var(--main-color);
 }
-
 .dropdown-menu li:first-child a:hover {
   background-color: #f1f1f1;
 }
-
-@media only screen and (min-width: 300px) and (max-width: 1140px) {
+@media only screen and (max-width: 992px) {
   .dropdown-menu.show {
     flex-wrap: wrap;
     max-height: 350px;
     overflow-y: scroll;
   }
 }
-
-@media only screen and (min-width: 300px) and (max-width: 1140px) {
+@media only screen and (min-width: 992px) and (max-width: 1140px) {
   .dropdown:hover .dropdown-menu {
-    width: 80vw;
+    width: 40vw;
     flex-wrap: wrap;
   }
 }
@@ -268,7 +258,7 @@ a {
   /* height: 300px; */
   background: var(--main-color);
   padding-bottom: 50px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .owner {
